--- a/p5js/index.html
+++ b/p5js/index.html
@@ -6,8 +6,9 @@
     <title>p5.js example</title>
     <style> body {padding: 0; margin: 0} </style>
     <script src="p5.min.js"></script>
-    <script src="sketch.js"></script>
+    <script src="collision.js"></script>
     <script src="particle.js"></script>
+    <script src="sketch.js"></script>
   </head>
   <body>
   </body>
